[package]
name = "foundry-debugger"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
foundry-evm.workspace = true
foundry-common.workspace = true
foundry-utils.workspace = true

alloy-primitives.workspace = true

crossterm = "0.27"
eyre.workspace = true
tracing.workspace = true
# Using a fork of revm as zksync-era requires the usage of sha3 0.10.6, and the latest revm uses 0.10.8
revm = { git = "https://github.com/dutterbutter/revm.git", tag = "sha3_0.10.6", default-features = false, features = [
  "std",
  "serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit",
  "optional_no_base_fee",
  "arbitrary",
]}
ratatui = { version = "0.23.0", default-features = false, features = ["crossterm"] }
