[package]
name = "era_cheatcodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revm.workspace = true
era_test_node.workspace = true
zksync_basic_types.workspace = true
zksync_types.workspace = true
zksync_state.workspace = true
multivm.workspace = true
zksync_web3_decl.workspace = true
zksync_utils.workspace = true
foundry-evm-core.workspace = true
foundry-cheatcodes-spec.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }

ethabi = "18.0.0"
itertools = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
eyre = "0.6"
tracing = { version = "0.1.26", features = ["log"] }
ethers = { version = "2.0.4", features = ["rustls"] }
hashbrown = { version = "0.14" }
maplit = "1.0.2"
