[package]
name = "era_cheatcodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revm.workspace = true
era_test_node.workspace = true
zksync_basic_types.workspace = true
zksync_types.workspace = true
zksync_state.workspace = true
multivm.workspace = true
zksync_web3_decl.workspace = true
zksync_utils.workspace = true
foundry-evm-core.workspace = true
foundry-common.workspace = true
foundry-cheatcodes-spec.workspace = true
foundry-cheatcodes.workspace = true
alloy-primitives.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }
eyre.workspace = true
hex.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

itertools = "0.12.0"
ethers = { version = "2.0.4", features = ["rustls"] }

tokio = { version = "1", features = ["time"] }
