[package]
name = "foundry-test-utils"
description = "Foundry testing utilities"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
foundry-common.workspace = true
foundry-compilers = { workspace = true, features = ["project-util"] }
foundry-config.workspace = true

alloy-primitives.workspace = true
alloy-provider.workspace = true

eyre.workspace = true
futures.workspace = true
fd-lock = "4.0"
parking_lot.workspace = true
regex.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rand.workspace = true
snapbox = { version = "0.6", features = ["json", "regex", "term-svg"] }
tokio.workspace = true
tempfile.workspace = true
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0"

# zk
zksync_types.workspace = true
zksync_telemetry.workspace = true
anvil_zksync_core.workspace = true
anvil_zksync_api_server.workspace = true
anvil_zksync_config.workspace = true
anvil_zksync_l1_sidecar.workspace = true

[dev-dependencies]
tokio.workspace = true
foundry-block-explorers.workspace = true

[features]
# feature for integration tests that test external projects
external-integration-tests = []
