[package]
name = "foundry-test-utils"
description = "Foundry testing utilities"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
foundry-common.workspace = true
foundry-compilers = { workspace = true, features = ["project-util"] }
foundry-config.workspace = true

alloy-primitives.workspace = true
alloy-provider.workspace = true

eyre.workspace = true
futures.workspace = true
fd-lock = "4.0"
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rand.workspace = true
snapbox.workspace = true
tempfile.workspace = true
ui_test = "0.30.2"
reqwest.workspace = true
svm.workspace = true

anyhow = "1.0"
tokio.workspace = true
httptest.workspace = true
tower-http = { version = "0.6.2", features = ["cors"] }

# zk
zksync_types.workspace = true
zksync_telemetry.workspace = true
anvil_zksync_core.workspace = true
anvil_zksync_common.workspace = true
anvil_zksync_api_server.workspace = true
anvil_zksync_config.workspace = true
anvil_zksync_l1_sidecar.workspace = true

# Pinned dependencies. See /Cargo.toml.
[target.'cfg(any())'.dependencies]
idna_adapter.workspace = true

[dev-dependencies]
foundry-block-explorers.workspace = true
