[package]
name = "foundry-zksync"
description = "Foundry zksync-vm implementations"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
foundry-common.workspace = true
foundry-compilers.workspace = true
foundry-config.workspace = true
foundry-cheatcodes-common.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-json-abi.workspace = true
hex.workspace = true
itertools.workspace = true
revm = { workspace = true, default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
    "optimism",
] }
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true

# zk
multivm.workspace = true
zksync_basic_types.workspace = true
zksync_types.workspace = true
zksync-web3-rs.workspace = true
era_test_node.workspace = true
zksync_utils.workspace = true
zksync_contracts.workspace = true
zksync_state.workspace = true

ansi_term = "0.12.1"
once_cell = "1"
eyre = "0.6"
semver = "1"
url = "2"
anyhow = { version = "1.0.70" }
dirs = { version = "5.0.0" }
tokio = "1"
reqwest = { version = "0.11", default-features = false }
xxhash-rust = { version = "0.8.7", features = ["const_xxh3"] }
