[package]
name = "anvil-core"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# foundry internal
foundry-evm = { path = "../../evm" }
foundry-utils = { path = "../../utils" }
# Using a fork of revm as zksync-era requires the usage of sha3 0.10.6, and the latest revm uses 0.10.8
revm = { git = "https://github.com/dutterbutter/revm.git", tag = "sha3_0.10.6", default-features = false, features = ["std", "serde", "memory_limit"] }

alloy-primitives = { workspace = true, features = ["serde"] }
ethers-core.workspace = true
serde = { workspace = true, optional = true }
serde_json.workspace = true
bytes = { version = "1.4" }
open-fastrlp = { version = "0.1.4", optional = true }

# trie
hash-db = { version = "0.15", default-features = false }
hash256-std-hasher = { version = "0.15", default-features = false }
triehash = { version = "0.8", default-features = false }
reference-trie = { version = "0.25" }
keccak-hasher = { version = "0.15" }

[dev-dependencies]
serde.workspace = true

[features]
default = []
impersonated-tx = []
fastrlp = ["dep:open-fastrlp"]
serde = ["dep:serde"]
