[package]
name = "foundry-cheatcodes-common"
description = "Foundry cheatcodes common"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives.workspace = true
revm.workspace = true
