[package]
name = "foundry-strategy-zksync"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-sol-types.workspace = true
alloy-json-abi.workspace = true
alloy-zksync.workspace = true
foundry-common.workspace = true
foundry-compilers.workspace = true
foundry-config.workspace = true
foundry-evm.workspace = true
foundry-evm-core.workspace = true
foundry-cheatcodes.workspace = true
foundry-linking.workspace = true
foundry-zksync-core.workspace = true
foundry-zksync-compilers.workspace = true

alloy-primitives.workspace = true
alloy-rpc-types.workspace = true

zksync_types.workspace = true

eyre.workspace = true
revm.workspace = true
itertools.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
