[package]
name = "foundry-zksync-compiler"
description = "Foundry zksync-vm compiler implementations"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
foundry-compilers = { workspace = true, features = ["svm-solc"] }
alloy-primitives.workspace = true
alloy-json-abi.workspace = true
hex.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true

# zk
zksync_basic_types.workspace = true
zksync_types.workspace = true
zksync_utils.workspace = true

ansi_term = "0.12.1"
globset = "0.4"
eyre = "0.6"
semver = "1"
futures = "0.3"
url = "2"
anyhow = { version = "1.0.70" }
dirs = { version = "5.0.0" }
tokio = "1"
reqwest = { version = "0.11", default-features = false }
xxhash-rust = { version = "0.8.7", features = ["const_xxh3"] }
