[package]
name = "foundry-zksync-compiler"
description = "Foundry zksync-vm compiler implementations"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
foundry-config.workspace = true
foundry-compilers = { workspace = true, features = ["svm-solc"] }
alloy-primitives.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
semver.workspace = true

# zk
zksync_types.workspace = true

eyre = "0.6"
