[package]
name = "foundry-zksync-core"
description = "Foundry zksync-vm core implementations"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
foundry-common.workspace = true
foundry-evm-abi.workspace = true
foundry-cheatcodes-common.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true
alloy-zksync.workspace = true
itertools.workspace = true
revm = { workspace = true, default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
    "optimism",
] }
tracing.workspace = true
serde.workspace = true

# zk
anvil_zksync_core.workspace = true
anvil_zksync_types.workspace = true
anvil_zksync_config.workspace = true
zksync_multivm.workspace = true
zksync_basic_types.workspace = true
zksync_types.workspace = true
zksync_contracts.workspace = true
zksync_vm_interface.workspace = true

ansiterm = "0.12.2"
eyre = "0.6"
url = "2"
